Fix navbar spacing issue

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -16,8 +16,8 @@
 }
 
 .navbar-website-title {
-    
     text-align: left;
+    margin-right: 25px;
     margin-left: 20px;
     min-width: 175px;
 }
